--- a/1. Designing and Implement Data Storage - Azure Synspse Analytics/0. Intro.md
+++ b/1. Designing and Implement Data Storage - Azure Synspse Analytics/0. Intro.md
@@ -1,16 +1,37 @@
-It's time to get down to business.
+# It's time to get down to business.
 
-It's time to understand on how we can connect, read data, and then transfer data onto an an ecosystem.
-(0)
+It's time to understand on how we can **connect**, **read** data, and then **transfer** data onto an an *ecosystem*.
+<kbd>
+  <img src="https://github.com/jetrocuba101/Data_Enggineeringg_Notes/blob/main/1.%20Designing%20and%20Implement%20Data%20Storage%20-%20Azure%20Synspse%20Analytics/Images/0.png" width="900" height="600" />
+</kbd>
 
-We're gonna be looking at a service known as Azure Synapse. Now Azure Synapse can be used to connect onto your data stores like Azure Data Lakes will be having your data in Azure Data Lake.
-(1)
-You might need to connect onto the data stores. We can make use of external tables to read data off of Azure Data Lake.
-(2)
-We can also host a SQL data warehouse with the help of Azure Synapse. So we're gonna look at something known as a dedicated SQL pool that can be used to host a SQL data warehouse.
-(3)
-We can also transfer data from one location onto another. We can transfer it onto Azure Synapse with the help of an integration feature of pipelines.
-(4)
-There's a lot that we need to cover.  So let's get ready and go onto the section when we learn all about working with Azure Synapse as a server.
-(5)
+
+We're gonna be looking at a service known as **Azure Synapse**. Now **Azure Synapse** can be used to `connect` onto your **data stores** like `Azure Data Lakes`, we will be having your data in `Azure Data Lake`.
+<kbd>
+  <img src="https://github.com/jetrocuba101/Data_Enggineeringg_Notes/blob/main/1.%20Designing%20and%20Implement%20Data%20Storage%20-%20Azure%20Synspse%20Analytics/Images/1.png" width="900" height="600" />
+</kbd>
+
+
+1. You might need to connect onto the `data stores`. We can make use of external **tables** to **read data** off of `Azure Data Lake`.
+      <kbd>
+        <img src="https://github.com/jetrocuba101/Data_Enggineeringg_Notes/blob/main/1.%20Designing%20and%20Implement%20Data%20Storage%20-%20Azure%20Synspse%20Analytics/Images/2.png" width="800" height="500" />
+      </kbd>
+      
+
+2. We can also **host** a `SQL data warehouse` with the help of `Azure Synapse`. So we're gonna look at something known as a **dedicated SQL pool** that can be used to **host** a `SQL data warehouse`.
+    <kbd>
+      <img src="https://github.com/jetrocuba101/Data_Enggineeringg_Notes/blob/main/1.%20Designing%20and%20Implement%20Data%20Storage%20-%20Azure%20Synspse%20Analytics/Images/3.png" width="800" height="500" />
+    </kbd>
+    
+    
+3. We can also **transfer** data from one location onto another. We can transfer it onto `Azure Synapse` with the help of an **integration feature** of `pipelines`.
+    <kbd>
+      <img src="https://github.com/jetrocuba101/Data_Enggineeringg_Notes/blob/main/1.%20Designing%20and%20Implement%20Data%20Storage%20-%20Azure%20Synspse%20Analytics/Images/4.png" width="900" height="500" />
+    </kbd>
+
+    
+There's a lot that we need to cover.  So let's get ready and go onto the section when we learn all about working with `Azure Synapse` as a **server**.
+<kbd>
+  <img src="https://github.com/jetrocuba101/Data_Enggineeringg_Notes/blob/main/1.%20Designing%20and%20Implement%20Data%20Storage%20-%20Azure%20Synspse%20Analytics/Images/5.png" width="900" height="600" />
+</kbd>
 
